--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "pg": "^8.11.0",
-    "pg-promise": "^11.5.0"
+    "pg-promise": "^11.5.0",
+    "sequelize": "^6.32.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -25,6 +27,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.10.1",
-    "@types/pg-promise": "^5.4.3"
+    "@types/pg-promise": "^5.4.3",
+    "@types/sequelize": "^4.28.15"
   }
 }
