--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/app.ts"
+    "dev": "nodemon ./src/app.ts",
+    "debug": "nodemon --inspect ./src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,21 @@
     "@types/multer": "^1.4.7",
     "@types/pg": "^8.10.1",
     "@types/pg-promise": "^5.4.3",
-    "@types/sequelize": "^4.28.15"
+    "@types/sequelize": "^4.28.15",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "app.ts"
+    ],
+    "ext": "ts",
+    "ignore": [
+      ".git",
+      "node_modules/**/node_modules"
+    ],
+    "execMap": {
+      "ts": "node --require ts-node/register -r tsconfig-paths/register"
+    }
   }
 }
